# PHD_CVA

./: Pipfile  README.md  pyproject.toml  requirements.txt
AlgdiffExample/: AlgdiffExample.ipynb
CODE/PaperCode/: cashflows.py  factor_simulation.py  option_formulas.py
CODE/TorchLearning/: charts.py  diffdeeplearnmodels.py
DATA/: x.npy  y.npy
NOTEBOOKS/PaperNotebooks/: Mondragon.ipynb  PaperResults.ipynb
Pytorch_learn/: PytorchLessons.ipynb
TEST_MODELS/: algdiffmodel.pth
